Dropping IE conditional comments as per HTML5BP spec Adding CSS values to variables Adding assets path to all JS files in templates

--- a/source/layouts/default.html
+++ b/source/layouts/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--[if lte IE 8]><html class="no-js ie"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""><!--<![endif]-->
+<html class="no-js" lang="">
 	{{> head }}
 	<body ontouchstart="">
 
