--- a/source/styles/utilities/_globals.scss
+++ b/source/styles/utilities/_globals.scss
@@ -3,9 +3,8 @@
 \*================================*/
 
 html {
-	color: #222;
-	font-size: 1em;
-	line-height: 1.4;
+	color: $black;
+	background-color: $white;
 }
 
 /*
@@ -15,12 +14,12 @@ html {
 */
 
 ::-moz-selection {
-	background: #b3d4fc;
+	background: $selection;
 	text-shadow: none;
 }
 
 ::selection {
-	background: #b3d4fc;
+	background: $selection;
 	text-shadow: none;
 }
 
@@ -83,6 +82,6 @@ textarea {
 
 noscript {}
 
-/* IE8 prompt */
+/* old IE prompt */
 
-.ie8 { /* you suck! */ }
+.old-ie { /* you suck! */ }
