--- a/source/styles/utilities/modules/_variables.scss
+++ b/source/styles/utilities/modules/_variables.scss
@@ -1,1 +1,11 @@
 /* vars */
+
+$black: #222;
+$white: #f5f5f5;
+
+$selection: #b3d4fc;
+
+$font-base: 16;
+$line-height: 1.5;
+
+$max-width: 75em; // 1200px
