--- a/source/layouts/partials/foot.html
+++ b/source/layouts/partials/foot.html
@@ -1,7 +1,7 @@
 <!-- HTML5BP thingy - uncomment if not using modernizr/yepnope
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-<script src="js/main.js"></script>
+<script>window.jQuery || document.write('<script src="{{ assets }}/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="{{ assets }}/js/main.js"></script>
 <script>
 	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
 	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
