--- a/source/layouts/partials/head.html
+++ b/source/layouts/partials/head.html
@@ -9,26 +9,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="{{ content.description }}">
 
-	<!--
-	<meta name="robots" content="noindex, nofollow">
-	-->
+	<!--meta name="robots" content="noindex, nofollow"-->
 
 	{{> favicon }}
 	{{> msapp }}
 
 	<link rel="stylesheet" href="{{ assets }}/css/style.css">
 
-	<script src="js/vendor/modernizr.js"></script>
+	<script src="{{ assets }}/js/vendor/modernizr.js"></script>
 	<script>
 		Modernizr.load({
 				load: [
 					'iegt8!timeout=2000!//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js',
 					'ie8!timeout=2000!//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js',
-					'js/script.js',
+					'{{ assets }}/js/script.js',
 					'//google-analytics.com/ga.js'
 				],
 				callback: {
-					'jquery.min.js' : function (url, result, key) { if (!window.jQuery) Modernizr.load('js/vendor/jquery.min.js'); },
+					'jquery.min.js' : function (url, result, key) { if (!window.jQuery) Modernizr.load('{{ assets }}/js/vendor/jquery.min.js'); },
 					'ga.js' : function (url, result, key) { var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']]; },
 				}
 			});
